# completest

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release.toml
.github/: renovate.json5  settings.yml
.github/workflows/: ci.yml
crates/completest-nu/: CHANGELOG.md  Cargo.toml
crates/completest-nu/src/: lib.rs
crates/completest-pty/: CHANGELOG.md  Cargo.toml
crates/completest-pty/src/: lib.rs
src/: lib.rs  nu.rs  pty.rs  vtparser.rs
