[workspace]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "completest"
version = "0.0.14"
description = "Run completions for your program"
repository = "https://github.com/assert-rs/completest"
categories = ["command-line-interface"]
keywords = ["completion"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/completest/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
nu = ["dep:nu-cli", "dep:nu-command", "dep:nu-parser", "dep:nu-protocol", "dep:nu-test-support", "dep:reedline"]

[dependencies]
nu-cli = { version = "0.78.0", optional = true }
nu-command = { version = "0.78.0", optional = true }
nu-parser = { version = "0.78.0", optional = true }
nu-protocol = { version = "0.78.0", optional = true }
nu-test-support = { version = "0.78.0", optional = true }
reedline = { version = "0.18.0", optional = true }

[target.'cfg(unix)'.dependencies]
ptyprocess = "0.4.1"
vt100 = "0.15.2"

[dev-dependencies]
