[package]
name = "completest-nu"
version = "0.4.0"
description = "Run completions for your program"
repository = "https://github.com/assert-rs/completest"
categories = ["command-line-interface"]
keywords = ["completion"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/completest/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
completest = { version = "0.4.0", path = "../../" }
dunce = "1.0.4"
nu-cli = "0.95.0"
nu-command = "0.95.0"
nu-parser = "0.95.0"
nu-protocol = "0.95.0"
nu-test-support = "0.95.0"
nu-cmd-lang = "0.95.0"
reedline = "0.32.0"

[dev-dependencies]

[lints]
workspace = true
