[package]
name = "completest-nu"
version = "0.4.2"
description = "Run completions for your program"
categories = ["command-line-interface"]
keywords = ["completion"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/completest/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
completest = { version = "0.4.0", path = "../../" }
dunce = "1.0.5"
nu-cli = "0.88.1"
nu-command = "0.88.1"
nu-parser = "0.88.1"
nu-protocol = "0.88.1"
nu-test-support = "0.88.1"
nu-cmd-lang = "0.88.1"
reedline = "0.27.1"

[dev-dependencies]

[lints]
workspace = true
